--- a/config.yaml
+++ b/config.yaml
@@ -72,7 +72,7 @@ params:
       enable: true
     # Enable and configure blog posts
     blog:
-      enable: true
+      enable: false
       # Share post on different social media
       shareButtons:
         facebook: true
