--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -19,7 +19,7 @@ company:
 # resume: "files/resume.pdf"
 
 # a summary about you
-summary: 'I am a passionate software engineer with x years of working experience. I built OSS tools for [Kubernetes](https://kubernetes.io/) using GO. My tools help people to deploy their workloads in Kubernetes. Sometimes, I work on some fun projects such as writing a theme, etc.'
+summary: 'A dedicated and analytical thinker who excels at solving problems using modern solutions. Driven to seek out challenges and thrive working in a team while looking for opportunity to provide leadership. I find it exciting to learn new concepts and technologies to implement and train end users and colleagues.'
 
 # your social links
 # give as many as you want. use font-awesome for the icons.
